src/test/ui/feature-gates/feature-gate-doc_search_hidden.stderr
error[E0658]: `#[doc(search_hidden)]` is experimental
  --> $DIR/feature-gate-doc_search_hidden.rs:1:1
   |
LL | #[doc(search_hidden)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #67368 <https://github.com/rust-lang/rust/issues/67368> for more information
   = help: add `#![feature(doc_search_hidden)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
