src/test/ui/feature-gates/feature-gate-doc_search_hidden.rs
#[doc(search_hidden)] //~ ERROR: `#[doc(search_hidden)]` is experimental
pub struct Bar;

fn main() {}
